# app/Http/Resources/StatusOrderResource.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+/**
+ * @property string id
+ * @property string status_name
+ */
+class StatusOrderResource extends JsonResource
+{
+    public static $wrap = "statusOrders";
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'statusName' => $this->status_name
+        ];
+    }
+}
